--- a/Assignment-4/style.css
+++ b/Assignment-4/style.css
@@ -215,7 +215,19 @@ a:hover{
 .imag{
     background-color: #000;
     text-align: center;
+    margin-bottom: 130px;
 }
+@media only screen and (max-width: 800px){
+    .imag{
+        margin-bottom: 150px;
+    }
+}
+@media only screen and (max-width: 430px){
+    .imag{
+        margin-bottom: 160px;
+    }
+}
+
 .background-image{
     /* background-image: url(https://oddtechnologies.com/wp-content/uploads/2017/10/CTA-2-1.jpg); */
     background-image: url("Images/aa.jpg");
@@ -232,10 +244,7 @@ a:hover{
 .copywrite{
     color: #8f9195;;
 }
-.icons ul{
-    list-style: none;
-    display: inline;
-}
+
 .icons li{
     display: inline;
     margin: 0 5px;
