--- a/css_files/saylaniwelfare.css
+++ b/css_files/saylaniwelfare.css
@@ -209,45 +209,19 @@
 }
 
 @keyframes slider {
-    0% {
-        left: 0%;
-    }
-    10% {
-        left: 0%;
-    }
-    16.6% {
-        left: -100%;
-    }
-    28% {
-        left: -100%;
-    }
-    33.2% {
-        left: -200%;
-    }
-    45% {
-        left: -200%;
-    }
-    49.8% {
-        left: -300%;
-    }
-    62% {
-        left: -300%;
-    }
-    66.4% {
-        left: -400%;
-    }
-    78% {
-        left: -400%;
-    }
-    83% {
-        left: -500%;
-    }
-    95% {
-        left: -500%;
-    }
-    100% {
-        left: -600%;
-    }
+    0% {left: 0%;}
+    10% {left: 0%;}
+    16.6% {left: -100%;}
+    28% {left: -100%;}
+    33.2% {left: -200%;}
+    45% {left: -200%;}
+    49.8% {left: -300%;}
+    62% {left: -300%;}
+    66.4% {left: -400%;}
+    78% {left: -400%;}
+    83% {left: -500%;}
+    95% {left: -500%;}
+    100% {left: -600%;}
 }
 
 .div-marquee-line {
